// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text tag fixtures escapes xml special characters 1`] = `
Object {
  "attributes": Array [
    Object {
      "name": "xmlns:wpc",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingCanvas",
    },
    Object {
      "name": "xmlns:cx",
      "value": "http://schemas.microsoft.com/office/drawing/2014/chartex",
    },
    Object {
      "name": "xmlns:cx1",
      "value": "http://schemas.microsoft.com/office/drawing/2015/9/8/chartex",
    },
    Object {
      "name": "xmlns:cx2",
      "value": "http://schemas.microsoft.com/office/drawing/2015/10/21/chartex",
    },
    Object {
      "name": "xmlns:cx3",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/9/chartex",
    },
    Object {
      "name": "xmlns:cx4",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/10/chartex",
    },
    Object {
      "name": "xmlns:cx5",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/11/chartex",
    },
    Object {
      "name": "xmlns:cx6",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/12/chartex",
    },
    Object {
      "name": "xmlns:cx7",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/13/chartex",
    },
    Object {
      "name": "xmlns:cx8",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/14/chartex",
    },
    Object {
      "name": "xmlns:mc",
      "value": "http://schemas.openxmlformats.org/markup-compatibility/2006",
    },
    Object {
      "name": "xmlns:aink",
      "value": "http://schemas.microsoft.com/office/drawing/2016/ink",
    },
    Object {
      "name": "xmlns:am3d",
      "value": "http://schemas.microsoft.com/office/drawing/2017/model3d",
    },
    Object {
      "name": "xmlns:o",
      "value": "urn:schemas-microsoft-com:office:office",
    },
    Object {
      "name": "xmlns:r",
      "value": "http://schemas.openxmlformats.org/officeDocument/2006/relationships",
    },
    Object {
      "name": "xmlns:m",
      "value": "http://schemas.openxmlformats.org/officeDocument/2006/math",
    },
    Object {
      "name": "xmlns:v",
      "value": "urn:schemas-microsoft-com:vml",
    },
    Object {
      "name": "xmlns:wp14",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingDrawing",
    },
    Object {
      "name": "xmlns:wp",
      "value": "http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing",
    },
    Object {
      "name": "xmlns:w10",
      "value": "urn:schemas-microsoft-com:office:word",
    },
    Object {
      "name": "xmlns:w",
      "value": "http://schemas.openxmlformats.org/wordprocessingml/2006/main",
    },
    Object {
      "name": "xmlns:w14",
      "value": "http://schemas.microsoft.com/office/word/2010/wordml",
    },
    Object {
      "name": "xmlns:w15",
      "value": "http://schemas.microsoft.com/office/word/2012/wordml",
    },
    Object {
      "name": "xmlns:w16cid",
      "value": "http://schemas.microsoft.com/office/word/2016/wordml/cid",
    },
    Object {
      "name": "xmlns:w16se",
      "value": "http://schemas.microsoft.com/office/word/2015/wordml/symex",
    },
    Object {
      "name": "xmlns:wpg",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingGroup",
    },
    Object {
      "name": "xmlns:wpi",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingInk",
    },
    Object {
      "name": "xmlns:wne",
      "value": "http://schemas.microsoft.com/office/word/2006/wordml",
    },
    Object {
      "name": "xmlns:wps",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingShape",
    },
    Object {
      "name": "mc:Ignorable",
      "value": "w14 w15 w16se w16cid wp14",
    },
  ],
  "childNodes": Array [
    Object {
      "attributes": Array [],
      "childNodes": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "w14:paraId",
              "value": "604CB376",
            },
            Object {
              "name": "w14:textId",
              "value": "42385B7D",
            },
            Object {
              "name": "w:rsidR",
              "value": "007E51D4",
            },
            Object {
              "name": "w:rsidRDefault",
              "value": "007E51D4",
            },
            Object {
              "name": "w:rsidP",
              "value": "00E14424",
            },
          ],
          "childNodes": Array [
            Object {
              "attributes": Array [],
              "childNodes": Array [
                Object {
                  "attributes": Array [
                    Object {
                      "name": "w:val",
                      "value": "0",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:bidi",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
              ],
              "nextSibling": Object {
                "attributes": Array [],
                "childNodes": Array [
                  Object {
                    "attributes": Array [
                      Object {
                        "name": "xml:space",
                        "value": "preserve",
                      },
                    ],
                    "childNodes": Array [
                      Object {
                        "nodeName": "#text",
                        "nodeType": "Text",
                        "parentNode": [Circular],
                        "textContent": "i'm special </w:r>",
                      },
                    ],
                    "nodeName": "w:t",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                ],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:id",
                      "value": "0",
                    },
                    Object {
                      "name": "w:name",
                      "value": "_GoBack",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:id",
                        "value": "0",
                      },
                    ],
                    "childNodes": Array [],
                    "nodeName": "w:bookmarkEnd",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:bookmarkStart",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:r",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:pPr",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [],
              "childNodes": Array [
                Object {
                  "attributes": Array [
                    Object {
                      "name": "xml:space",
                      "value": "preserve",
                    },
                  ],
                  "childNodes": Array [
                    Object {
                      "nodeName": "#text",
                      "nodeType": "Text",
                      "parentNode": [Circular],
                      "textContent": "i'm special </w:r>",
                    },
                  ],
                  "nodeName": "w:t",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
              ],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:id",
                    "value": "0",
                  },
                  Object {
                    "name": "w:name",
                    "value": "_GoBack",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:id",
                      "value": "0",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:bookmarkEnd",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:bookmarkStart",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:r",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:id",
                  "value": "0",
                },
                Object {
                  "name": "w:name",
                  "value": "_GoBack",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:id",
                    "value": "0",
                  },
                ],
                "childNodes": Array [],
                "nodeName": "w:bookmarkEnd",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:bookmarkStart",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:id",
                  "value": "0",
                },
              ],
              "childNodes": Array [],
              "nodeName": "w:bookmarkEnd",
              "nodeType": "General",
              "parentNode": [Circular],
            },
          ],
          "nextSibling": Object {
            "attributes": Array [
              Object {
                "name": "w:rsidR",
                "value": "007E51D4",
              },
              Object {
                "name": "w:rsidSect",
                "value": "00C4055C",
              },
            ],
            "childNodes": Array [
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:w",
                    "value": "11906",
                  },
                  Object {
                    "name": "w:h",
                    "value": "16838",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:top",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:right",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:bottom",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:left",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:header",
                      "value": "708",
                    },
                    Object {
                      "name": "w:footer",
                      "value": "708",
                    },
                    Object {
                      "name": "w:gutter",
                      "value": "0",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:space",
                        "value": "708",
                      },
                    ],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [],
                        "childNodes": Array [],
                        "nextSibling": Object {
                          "attributes": Array [
                            Object {
                              "name": "w:linePitch",
                              "value": "360",
                            },
                          ],
                          "childNodes": Array [],
                          "nodeName": "w:docGrid",
                          "nodeType": "General",
                          "parentNode": [Circular],
                        },
                        "nodeName": "w:rtlGutter",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:bidi",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:cols",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:pgMar",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:pgSz",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:top",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:right",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:bottom",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:left",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:header",
                    "value": "708",
                  },
                  Object {
                    "name": "w:footer",
                    "value": "708",
                  },
                  Object {
                    "name": "w:gutter",
                    "value": "0",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:space",
                      "value": "708",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [
                          Object {
                            "name": "w:linePitch",
                            "value": "360",
                          },
                        ],
                        "childNodes": Array [],
                        "nodeName": "w:docGrid",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:rtlGutter",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:bidi",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:cols",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:pgMar",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:space",
                    "value": "708",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [
                        Object {
                          "name": "w:linePitch",
                          "value": "360",
                        },
                      ],
                      "childNodes": Array [],
                      "nodeName": "w:docGrid",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:rtlGutter",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:bidi",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:cols",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:linePitch",
                        "value": "360",
                      },
                    ],
                    "childNodes": Array [],
                    "nodeName": "w:docGrid",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:rtlGutter",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:bidi",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:linePitch",
                      "value": "360",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:docGrid",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:rtlGutter",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:linePitch",
                    "value": "360",
                  },
                ],
                "childNodes": Array [],
                "nodeName": "w:docGrid",
                "nodeType": "General",
                "parentNode": [Circular],
              },
            ],
            "nodeName": "w:sectPr",
            "nodeType": "General",
            "parentNode": [Circular],
          },
          "nodeName": "w:p",
          "nodeType": "General",
          "parentNode": [Circular],
        },
        Object {
          "attributes": Array [
            Object {
              "name": "w:rsidR",
              "value": "007E51D4",
            },
            Object {
              "name": "w:rsidSect",
              "value": "00C4055C",
            },
          ],
          "childNodes": Array [
            Object {
              "attributes": Array [
                Object {
                  "name": "w:w",
                  "value": "11906",
                },
                Object {
                  "name": "w:h",
                  "value": "16838",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:top",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:right",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:bottom",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:left",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:header",
                    "value": "708",
                  },
                  Object {
                    "name": "w:footer",
                    "value": "708",
                  },
                  Object {
                    "name": "w:gutter",
                    "value": "0",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:space",
                      "value": "708",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [
                          Object {
                            "name": "w:linePitch",
                            "value": "360",
                          },
                        ],
                        "childNodes": Array [],
                        "nodeName": "w:docGrid",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:rtlGutter",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:bidi",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:cols",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:pgMar",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:pgSz",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:top",
                  "value": "1440",
                },
                Object {
                  "name": "w:right",
                  "value": "1440",
                },
                Object {
                  "name": "w:bottom",
                  "value": "1440",
                },
                Object {
                  "name": "w:left",
                  "value": "1440",
                },
                Object {
                  "name": "w:header",
                  "value": "708",
                },
                Object {
                  "name": "w:footer",
                  "value": "708",
                },
                Object {
                  "name": "w:gutter",
                  "value": "0",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:space",
                    "value": "708",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [
                        Object {
                          "name": "w:linePitch",
                          "value": "360",
                        },
                      ],
                      "childNodes": Array [],
                      "nodeName": "w:docGrid",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:rtlGutter",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:bidi",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:cols",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:pgMar",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:space",
                  "value": "708",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:linePitch",
                        "value": "360",
                      },
                    ],
                    "childNodes": Array [],
                    "nodeName": "w:docGrid",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:rtlGutter",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:bidi",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:cols",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:linePitch",
                      "value": "360",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:docGrid",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:rtlGutter",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:bidi",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:linePitch",
                    "value": "360",
                  },
                ],
                "childNodes": Array [],
                "nodeName": "w:docGrid",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:rtlGutter",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:linePitch",
                  "value": "360",
                },
              ],
              "childNodes": Array [],
              "nodeName": "w:docGrid",
              "nodeType": "General",
              "parentNode": [Circular],
            },
          ],
          "nodeName": "w:sectPr",
          "nodeType": "General",
          "parentNode": [Circular],
        },
      ],
      "nodeName": "w:body",
      "nodeType": "General",
      "parentNode": [Circular],
    },
  ],
  "nodeName": "w:document",
  "nodeType": "General",
}
`;

exports[`text tag fixtures replaces newlines with <w:br/> 1`] = `
Object {
  "attributes": Array [
    Object {
      "name": "xmlns:wpc",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingCanvas",
    },
    Object {
      "name": "xmlns:cx",
      "value": "http://schemas.microsoft.com/office/drawing/2014/chartex",
    },
    Object {
      "name": "xmlns:cx1",
      "value": "http://schemas.microsoft.com/office/drawing/2015/9/8/chartex",
    },
    Object {
      "name": "xmlns:cx2",
      "value": "http://schemas.microsoft.com/office/drawing/2015/10/21/chartex",
    },
    Object {
      "name": "xmlns:cx3",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/9/chartex",
    },
    Object {
      "name": "xmlns:cx4",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/10/chartex",
    },
    Object {
      "name": "xmlns:cx5",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/11/chartex",
    },
    Object {
      "name": "xmlns:cx6",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/12/chartex",
    },
    Object {
      "name": "xmlns:cx7",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/13/chartex",
    },
    Object {
      "name": "xmlns:cx8",
      "value": "http://schemas.microsoft.com/office/drawing/2016/5/14/chartex",
    },
    Object {
      "name": "xmlns:mc",
      "value": "http://schemas.openxmlformats.org/markup-compatibility/2006",
    },
    Object {
      "name": "xmlns:aink",
      "value": "http://schemas.microsoft.com/office/drawing/2016/ink",
    },
    Object {
      "name": "xmlns:am3d",
      "value": "http://schemas.microsoft.com/office/drawing/2017/model3d",
    },
    Object {
      "name": "xmlns:o",
      "value": "urn:schemas-microsoft-com:office:office",
    },
    Object {
      "name": "xmlns:r",
      "value": "http://schemas.openxmlformats.org/officeDocument/2006/relationships",
    },
    Object {
      "name": "xmlns:m",
      "value": "http://schemas.openxmlformats.org/officeDocument/2006/math",
    },
    Object {
      "name": "xmlns:v",
      "value": "urn:schemas-microsoft-com:vml",
    },
    Object {
      "name": "xmlns:wp14",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingDrawing",
    },
    Object {
      "name": "xmlns:wp",
      "value": "http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing",
    },
    Object {
      "name": "xmlns:w10",
      "value": "urn:schemas-microsoft-com:office:word",
    },
    Object {
      "name": "xmlns:w",
      "value": "http://schemas.openxmlformats.org/wordprocessingml/2006/main",
    },
    Object {
      "name": "xmlns:w14",
      "value": "http://schemas.microsoft.com/office/word/2010/wordml",
    },
    Object {
      "name": "xmlns:w15",
      "value": "http://schemas.microsoft.com/office/word/2012/wordml",
    },
    Object {
      "name": "xmlns:w16cid",
      "value": "http://schemas.microsoft.com/office/word/2016/wordml/cid",
    },
    Object {
      "name": "xmlns:w16se",
      "value": "http://schemas.microsoft.com/office/word/2015/wordml/symex",
    },
    Object {
      "name": "xmlns:wpg",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingGroup",
    },
    Object {
      "name": "xmlns:wpi",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingInk",
    },
    Object {
      "name": "xmlns:wne",
      "value": "http://schemas.microsoft.com/office/word/2006/wordml",
    },
    Object {
      "name": "xmlns:wps",
      "value": "http://schemas.microsoft.com/office/word/2010/wordprocessingShape",
    },
    Object {
      "name": "mc:Ignorable",
      "value": "w14 w15 w16se w16cid wp14",
    },
  ],
  "childNodes": Array [
    Object {
      "attributes": Array [],
      "childNodes": Array [
        Object {
          "attributes": Array [
            Object {
              "name": "w14:paraId",
              "value": "604CB376",
            },
            Object {
              "name": "w14:textId",
              "value": "42385B7D",
            },
            Object {
              "name": "w:rsidR",
              "value": "007E51D4",
            },
            Object {
              "name": "w:rsidRDefault",
              "value": "007E51D4",
            },
            Object {
              "name": "w:rsidP",
              "value": "00E14424",
            },
          ],
          "childNodes": Array [
            Object {
              "attributes": Array [],
              "childNodes": Array [
                Object {
                  "attributes": Array [
                    Object {
                      "name": "w:val",
                      "value": "0",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:bidi",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
              ],
              "nextSibling": Object {
                "attributes": Array [],
                "childNodes": Array [
                  Object {
                    "attributes": Array [],
                    "childNodes": Array [
                      Object {
                        "nodeName": "#text",
                        "nodeType": "Text",
                        "parentNode": [Circular],
                        "textContent": "first line",
                      },
                    ],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [
                          Object {
                            "name": "xml:space",
                            "value": "preserve",
                          },
                        ],
                        "childNodes": Array [
                          Object {
                            "nodeName": "#text",
                            "nodeType": "Text",
                            "parentNode": [Circular],
                            "textContent": "second line",
                          },
                        ],
                        "nodeName": "w:t",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:br",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:t",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [
                        Object {
                          "name": "xml:space",
                          "value": "preserve",
                        },
                      ],
                      "childNodes": Array [
                        Object {
                          "nodeName": "#text",
                          "nodeType": "Text",
                          "parentNode": [Circular],
                          "textContent": "second line",
                        },
                      ],
                      "nodeName": "w:t",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:br",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  Object {
                    "attributes": Array [
                      Object {
                        "name": "xml:space",
                        "value": "preserve",
                      },
                    ],
                    "childNodes": Array [
                      Object {
                        "nodeName": "#text",
                        "nodeType": "Text",
                        "parentNode": [Circular],
                        "textContent": "second line",
                      },
                    ],
                    "nodeName": "w:t",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                ],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:id",
                      "value": "0",
                    },
                    Object {
                      "name": "w:name",
                      "value": "_GoBack",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:id",
                        "value": "0",
                      },
                    ],
                    "childNodes": Array [],
                    "nodeName": "w:bookmarkEnd",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:bookmarkStart",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:r",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:pPr",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [],
              "childNodes": Array [
                Object {
                  "attributes": Array [],
                  "childNodes": Array [
                    Object {
                      "nodeName": "#text",
                      "nodeType": "Text",
                      "parentNode": [Circular],
                      "textContent": "first line",
                    },
                  ],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [
                        Object {
                          "name": "xml:space",
                          "value": "preserve",
                        },
                      ],
                      "childNodes": Array [
                        Object {
                          "nodeName": "#text",
                          "nodeType": "Text",
                          "parentNode": [Circular],
                          "textContent": "second line",
                        },
                      ],
                      "nodeName": "w:t",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:br",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:t",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "xml:space",
                        "value": "preserve",
                      },
                    ],
                    "childNodes": Array [
                      Object {
                        "nodeName": "#text",
                        "nodeType": "Text",
                        "parentNode": [Circular],
                        "textContent": "second line",
                      },
                    ],
                    "nodeName": "w:t",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:br",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                Object {
                  "attributes": Array [
                    Object {
                      "name": "xml:space",
                      "value": "preserve",
                    },
                  ],
                  "childNodes": Array [
                    Object {
                      "nodeName": "#text",
                      "nodeType": "Text",
                      "parentNode": [Circular],
                      "textContent": "second line",
                    },
                  ],
                  "nodeName": "w:t",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
              ],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:id",
                    "value": "0",
                  },
                  Object {
                    "name": "w:name",
                    "value": "_GoBack",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:id",
                      "value": "0",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:bookmarkEnd",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:bookmarkStart",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:r",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:id",
                  "value": "0",
                },
                Object {
                  "name": "w:name",
                  "value": "_GoBack",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:id",
                    "value": "0",
                  },
                ],
                "childNodes": Array [],
                "nodeName": "w:bookmarkEnd",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:bookmarkStart",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:id",
                  "value": "0",
                },
              ],
              "childNodes": Array [],
              "nodeName": "w:bookmarkEnd",
              "nodeType": "General",
              "parentNode": [Circular],
            },
          ],
          "nextSibling": Object {
            "attributes": Array [
              Object {
                "name": "w:rsidR",
                "value": "007E51D4",
              },
              Object {
                "name": "w:rsidSect",
                "value": "00C4055C",
              },
            ],
            "childNodes": Array [
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:w",
                    "value": "11906",
                  },
                  Object {
                    "name": "w:h",
                    "value": "16838",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:top",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:right",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:bottom",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:left",
                      "value": "1440",
                    },
                    Object {
                      "name": "w:header",
                      "value": "708",
                    },
                    Object {
                      "name": "w:footer",
                      "value": "708",
                    },
                    Object {
                      "name": "w:gutter",
                      "value": "0",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:space",
                        "value": "708",
                      },
                    ],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [],
                        "childNodes": Array [],
                        "nextSibling": Object {
                          "attributes": Array [
                            Object {
                              "name": "w:linePitch",
                              "value": "360",
                            },
                          ],
                          "childNodes": Array [],
                          "nodeName": "w:docGrid",
                          "nodeType": "General",
                          "parentNode": [Circular],
                        },
                        "nodeName": "w:rtlGutter",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:bidi",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:cols",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:pgMar",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:pgSz",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:top",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:right",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:bottom",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:left",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:header",
                    "value": "708",
                  },
                  Object {
                    "name": "w:footer",
                    "value": "708",
                  },
                  Object {
                    "name": "w:gutter",
                    "value": "0",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:space",
                      "value": "708",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [
                          Object {
                            "name": "w:linePitch",
                            "value": "360",
                          },
                        ],
                        "childNodes": Array [],
                        "nodeName": "w:docGrid",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:rtlGutter",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:bidi",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:cols",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:pgMar",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:space",
                    "value": "708",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [
                        Object {
                          "name": "w:linePitch",
                          "value": "360",
                        },
                      ],
                      "childNodes": Array [],
                      "nodeName": "w:docGrid",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:rtlGutter",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:bidi",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:cols",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:linePitch",
                        "value": "360",
                      },
                    ],
                    "childNodes": Array [],
                    "nodeName": "w:docGrid",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:rtlGutter",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:bidi",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:linePitch",
                      "value": "360",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:docGrid",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:rtlGutter",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              Object {
                "attributes": Array [
                  Object {
                    "name": "w:linePitch",
                    "value": "360",
                  },
                ],
                "childNodes": Array [],
                "nodeName": "w:docGrid",
                "nodeType": "General",
                "parentNode": [Circular],
              },
            ],
            "nodeName": "w:sectPr",
            "nodeType": "General",
            "parentNode": [Circular],
          },
          "nodeName": "w:p",
          "nodeType": "General",
          "parentNode": [Circular],
        },
        Object {
          "attributes": Array [
            Object {
              "name": "w:rsidR",
              "value": "007E51D4",
            },
            Object {
              "name": "w:rsidSect",
              "value": "00C4055C",
            },
          ],
          "childNodes": Array [
            Object {
              "attributes": Array [
                Object {
                  "name": "w:w",
                  "value": "11906",
                },
                Object {
                  "name": "w:h",
                  "value": "16838",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:top",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:right",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:bottom",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:left",
                    "value": "1440",
                  },
                  Object {
                    "name": "w:header",
                    "value": "708",
                  },
                  Object {
                    "name": "w:footer",
                    "value": "708",
                  },
                  Object {
                    "name": "w:gutter",
                    "value": "0",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:space",
                      "value": "708",
                    },
                  ],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [],
                      "childNodes": Array [],
                      "nextSibling": Object {
                        "attributes": Array [
                          Object {
                            "name": "w:linePitch",
                            "value": "360",
                          },
                        ],
                        "childNodes": Array [],
                        "nodeName": "w:docGrid",
                        "nodeType": "General",
                        "parentNode": [Circular],
                      },
                      "nodeName": "w:rtlGutter",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:bidi",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:cols",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:pgMar",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:pgSz",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:top",
                  "value": "1440",
                },
                Object {
                  "name": "w:right",
                  "value": "1440",
                },
                Object {
                  "name": "w:bottom",
                  "value": "1440",
                },
                Object {
                  "name": "w:left",
                  "value": "1440",
                },
                Object {
                  "name": "w:header",
                  "value": "708",
                },
                Object {
                  "name": "w:footer",
                  "value": "708",
                },
                Object {
                  "name": "w:gutter",
                  "value": "0",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:space",
                    "value": "708",
                  },
                ],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [],
                    "childNodes": Array [],
                    "nextSibling": Object {
                      "attributes": Array [
                        Object {
                          "name": "w:linePitch",
                          "value": "360",
                        },
                      ],
                      "childNodes": Array [],
                      "nodeName": "w:docGrid",
                      "nodeType": "General",
                      "parentNode": [Circular],
                    },
                    "nodeName": "w:rtlGutter",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:bidi",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:cols",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:pgMar",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:space",
                  "value": "708",
                },
              ],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [],
                  "childNodes": Array [],
                  "nextSibling": Object {
                    "attributes": Array [
                      Object {
                        "name": "w:linePitch",
                        "value": "360",
                      },
                    ],
                    "childNodes": Array [],
                    "nodeName": "w:docGrid",
                    "nodeType": "General",
                    "parentNode": [Circular],
                  },
                  "nodeName": "w:rtlGutter",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:bidi",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:cols",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [],
                "childNodes": Array [],
                "nextSibling": Object {
                  "attributes": Array [
                    Object {
                      "name": "w:linePitch",
                      "value": "360",
                    },
                  ],
                  "childNodes": Array [],
                  "nodeName": "w:docGrid",
                  "nodeType": "General",
                  "parentNode": [Circular],
                },
                "nodeName": "w:rtlGutter",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:bidi",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [],
              "childNodes": Array [],
              "nextSibling": Object {
                "attributes": Array [
                  Object {
                    "name": "w:linePitch",
                    "value": "360",
                  },
                ],
                "childNodes": Array [],
                "nodeName": "w:docGrid",
                "nodeType": "General",
                "parentNode": [Circular],
              },
              "nodeName": "w:rtlGutter",
              "nodeType": "General",
              "parentNode": [Circular],
            },
            Object {
              "attributes": Array [
                Object {
                  "name": "w:linePitch",
                  "value": "360",
                },
              ],
              "childNodes": Array [],
              "nodeName": "w:docGrid",
              "nodeType": "General",
              "parentNode": [Circular],
            },
          ],
          "nodeName": "w:sectPr",
          "nodeType": "General",
          "parentNode": [Circular],
        },
      ],
      "nodeName": "w:body",
      "nodeType": "General",
      "parentNode": [Circular],
    },
  ],
  "nodeName": "w:document",
  "nodeType": "General",
}
`;
